# spearmint-framework

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: copilot_instructions.md
.github/workflows/: docs.yml  python-publish.yml  update-docs.lock.yml  update-docs.md  verify-docs-snippets.lock.yml  verify-docs-snippets.md
.project/plans/: review-task1-task2.md  task-1-project-dependency-baseline.md  task-2-core-types-data-models.md  task-3-logging-layer.md  task-4-strategy-protocol-builtins.md  task-plan.md
.project/specs/: design-spec.md
.project/tasks/: 001-split-spearmint-module.md  002-registry-context-lifecycle.md  003-branch-strategy-surface.md  004-qualname-coupling.md  005-mutable-default-args.md  006-ast-source-fragility.md  007-config-binding-separation.md  008-config-model-contract.md  009-dynamicvalue-private-import.md  010-parse-configs-strictness.md  011-unused-imports.md
cookbook/: README.md  async_experiment.py  async_step.py  basic_pipeline.py  config_binding.py  dataset_processing.py  dynamic_config.py  dynamic_variants.py  nested_experiment.py  simple_experiment.py  typed_config.py  yaml_configs.py
cookbook/advanced/: dataset_processing.py  nested_experiment.py
cookbook/advanced/component_based_experiments/: _components.py  main.py  main_with_binding.py
cookbook/advanced/data/: sample.jsonl
cookbook/basic/: async_experiment.py  basic_pipeline.py  simple_experiment.py
cookbook/configuration/: config_binding.py  dynamic_config.py  typed_config.py  yaml_configs.py
cookbook/configuration/config/: config1.yaml
cookbook/data/: step_input.jsonl
cookbook/online_experiments/ab_test_app/: app.py  main_config.yaml  variant_config.yaml
cookbook/online_experiments/basic_app/: app.py  config.yaml
cookbook/online_experiments/shadow_traffic_app/: app.py
docs/: CONTRIBUTING.md  contributing.md  index.md
docs/explanation/: architecture.md  comparison-to-alternatives.md  design-decisions.md  experiment-lifecycle.md  index.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/how-to/: access-mlflow.md  compare-configurations.md  configurations.md  configure-otel.md  custom-evaluators.md  custom-strategies.md  debug-experiments.md  debugging.md  index.md  integrate-fastapi.md  nested-experiments.md  parameter-sweeps.md  performance-tuning.md  process-datasets.md  production-deployment.md  shadow-testing.md  testing-experiments.md  typed-configurations.md
docs/reference/: api.md  configuration.md  index.md  runners.md  strategies.md
docs/reference/api/: config-binding.md  config-parsing.md  config.md  configuration.md  dynamic-value.md  experiment-case.md  experiment.md  function-result.md  results.md  runner.md  spearmint.md
docs/tutorials/: configuration-basics.md  fastapi-experiment.md  getting-started.md  index.md  multi-config-experiments.md  your-first-experiment.md
samples/: scratchpad.py
samples/offline_experiment/: config.py  mint.py  nested.py
samples/offline_experiment/config/: config0.yaml  config1.yaml  config2.yaml
samples/offline_experiment/data/: step_input.jsonl
samples/online_experiment/: README.md  app.py  app_ab.py  app_multi.py  config.yaml  gpt-5.yaml  prompt.yaml  requirements.txt
src/spearmint/: __init__.py  branch.py  cli.py  client_wrapper.py  components.py  config.py  context.py  core.py  experiment.py  experiment_function.py  hypothesis.py  logging.py  registry.py  runner.py  spearmint.py  strategies.py  sweepers.py  types.py
src/spearmint/config/: __init__.py  config.py  dynamic_value.py
src/spearmint/configuration/: __init__.py  config.py  dynamic_value.py
src/spearmint/core/: __init__.py  branch.py  branch_strategy.py  config_strategy.py  context.py  dependency_injector.py  experiment.py  introspection.py  plan_executor.py  result_formatter.py  (+4 more)
src/tests/: test_spearmint.py
tests/: conftest.py  test_branch.py  test_config_basic.py  test_e2e.py  test_experiment_decorator.py  test_hypothesis.py  test_imports.py  test_logging.py  test_logging_mlflow.py  test_spearmint.py  test_spearmint_run_evaluate.py  test_strategies.py  test_strategy_multi_branch.py  test_strategy_registration.py  test_strategy_round_robin.py  test_strategy_shadow.py
tests/data/: config.yaml  dataset.jsonl
tests/fixtures/: functions.py
tests/integration/: test_decorator_flows.py  test_plan_execution.py
v2_src/spearmint_v2/: __init__.py  dependency_injector.py  experiment_enumerator.py  spearmint.py
v2_src/tests/: test_spearmint.py  test_spearmint_run.py
(+23 files in other folders)
