[project]
name = "spearmint"
version = "0.1.0"
description = "A Python framework for running rapid llm-based experiments"
readme = "README.md"
authors = [
    { name = "Bill DeRusha", email = "444835+bderusha@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]